fixed up legend alignment

--- a/app/src/components/indicator_summary.css
+++ b/app/src/components/indicator_summary.css
@@ -12,8 +12,8 @@
     text-align: center;
     line-height: 0%;
     text-shadow: 2px 3px 5px rgba(0,0,0,0.5);
-    width: 100%;
-    opacity: 0.8;
+    width: 360px;
+    opacity: 1;
     font-family: Arial, Helvetica, sans-serif;
     margin:auto;
     /* position: absolute;
