--- a/app/src/components/map.css
+++ b/app/src/components/map.css
@@ -13,7 +13,7 @@
 #info_button {
     position: relative;
     top: 8px;
-    left: 0px;
+    left: 10px;
     width:29px;
     height:29px;
     box-sizing: border-box;
@@ -71,7 +71,7 @@
 
 #lts-legend {
     display: table;
-    width: 350px;
+    width: 360px;
     /* height: 30px; */
     margin: 0px;
     padding: 0px;
@@ -79,13 +79,12 @@
     text-align: center;
     /* line-height: 40px; */
     text-shadow: 2px 3px 5px rgba(0,0,0,0.5);
-    opacity: 0.8;
+    /* opacity: 0.8; */
     font-family: Arial, Helvetica, sans-serif;
 }
 
 #lts-legend-row {
     display: table-row;
-    width: 100%;
     /* height: 30px; */
     /* height: 60px; */
 }
